--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@rollup/plugin-typescript": "^8.0.0",
     "@roxi/routify": "^2.18.3",
     "@tsconfig/svelte": "^2.0.1",
+    "autoprefixer": "latest",
     "npm-run-all": "^4.1.5",
+    "postcss": "latest",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -25,6 +27,7 @@
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
+    "tailwindcss": "latest",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
   },
