fix (docker) update dockerignore file

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,12 @@
 .git
 node_modules
 public/build
-.yarn
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
+
+.yarn.lock
