--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,6 @@ services:
     build: .
     ports: 
       - "8080:8080"
+      - "35729:35729" 
     volumes:
-      - type: volume
-        source: .
-        target: /usr/src/app
+      - "./:/usr/src/app"
