--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build: .
     ports: 
       - "8080:8080"
+      - "8081:8081"
       - "35729:35729" 
     volumes:
-      - "./:/usr/src/app"
+      - ./:/usr/src/app
