--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@rollup/plugin-typescript": "^8.0.0",
     "@roxi/routify": "^2.18.3",
     "@tsconfig/svelte": "^2.0.1",
+    "animejs": "^3.2.1",
     "autoprefixer": "latest",
     "npm-run-all": "^4.1.5",
     "postcss": "latest",
@@ -33,7 +34,6 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
-    "@barba/core": "^2.9.7",
     "express": "^4.17.1",
     "sirv-cli": "^1.0.0",
     "yarn-run-all": "^3.1.1"
