--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tsconfig/svelte": "^2.0.1",
     "animejs": "^3.2.1",
     "autoprefixer": "latest",
+    "mdsvex": "^0.9.8",
     "npm-run-all": "^4.1.5",
     "postcss": "latest",
     "rollup": "^2.3.4",
