--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "@urql/svelte": "^1.3.2",
     "express": "^4.17.1",
     "graphql": "^16.0.1",
     "sirv-cli": "^1.0.0",
