style (footer) remove footer for now

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#ff6433",
-        "activityBar.activeBorder": "#00ff3d",
-        "activityBar.background": "#ff6433",
+        "activityBar.activeBackground": "#e5b7eb",
+        "activityBar.activeBorder": "#96892a",
+        "activityBar.background": "#e5b7eb",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#00ff3d",
+        "activityBarBadge.background": "#96892a",
         "activityBarBadge.foreground": "#15202b",
-        "statusBar.background": "#ff3d00",
-        "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#ff6433",
-        "titleBar.activeBackground": "#ff3d00",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#ff3d0099",
-        "titleBar.inactiveForeground": "#e7e7e799",
-        "sash.hoverBorder": "#ff6433",
-        "statusBarItem.remoteBackground": "#ff3d00",
-        "statusBarItem.remoteForeground": "#e7e7e7"
+        "sash.hoverBorder": "#e5b7eb",
+        "statusBar.background": "#d68fe0",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#c767d5",
+        "statusBarItem.remoteBackground": "#d68fe0",
+        "statusBarItem.remoteForeground": "#15202b",
+        "titleBar.activeBackground": "#d68fe0",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#d68fe099",
+        "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#ff3d00"
+    "peacock.color": "#d68fe0"
 }
