--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,2 +1,2 @@
-nodeLinker: "node-modules"
-yarnPath: ".yarn/releases/yarn-berry.cjs"
+nodeLinker: node-modules
+yarnPath: .yarn/releases/yarn-3.5.0.cjs
