--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,15 @@
 version: "3.9"
 services:
   web:
-    build: .
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    restart: always
     ports:       
-      - "5000:8080"      
+      - "8080:8080"      
     volumes:
       - ./:/usr/src/app
+    working_dir: /usr/src/app
     env_file:
       - .env
-    command: sh -c "yarn dev" 
+    command: sh -c "yarn dev"
