--- a/package.json
+++ b/package.json
@@ -41,5 +41,6 @@
     "graphql": "^16.0.1",
     "sirv-cli": "^1.0.0",
     "yarn-run-all": "^3.1.1"
-  }
+  },
+  "packageManager": "yarn@3.5.0"
 }
