fix docker-compose folder path 	update body and footer styles to be responsive 	remove margin bottom from body 	update start command in package-json 	remove body styles from app root

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev:rollup": "rollup -c -w",
     "dev:routify": "routify",
     "build": "routify -b && rollup -c",
-    "start": "sirv public --no-clear -s",
+    "start": "sirv public --no-clear -s --host",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "serve": "node server.js"
   },
