--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,10 @@ services:
       dockerfile: Dockerfile
     restart: always
     ports:       
-      - "8080:8080"      
+      - "8080:8080"     
+    environment:
+      - NODE_ENV=development
+      - PORT=8080
     volumes:
       - ./:/usr/src/app
     working_dir: /usr/src/app
