--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,16 @@ dist
 .env
 # Local Netlify folder
 .netlify
+
+
+.DS_Store
+node_modules
+/build
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
+
