--- a/package.json
+++ b/package.json
@@ -1,46 +1,33 @@
 {
-  "name": "skarlet",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "run-p 'dev:*'",
-    "dev:rollup": "rollup -c -w",
-    "dev:routify": "routify",
-    "build": "routify -b && rollup -c",
-    "start": "sirv public --no-clear -s --host",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "serve": "node server.js"
-  },
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "@rollup/plugin-replace": "^3.0.0",
-    "@rollup/plugin-typescript": "^8.0.0",
-    "@roxi/routify": "^2.18.3",
-    "@tsconfig/svelte": "^2.0.1",
-    "animejs": "^3.2.1",
-    "autoprefixer": "latest",
-    "mdsvex": "^0.9.8",
-    "npm-run-all": "^4.1.5",
-    "postcss": "latest",
-    "rollup": "^2.3.4",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0",
-    "svelte-check": "^2.0.0",
-    "svelte-preprocess": "^4.0.0",
-    "tailwindcss": "latest",
-    "tslib": "^2.0.0",
-    "typescript": "^4.0.0"
-  },
-  "dependencies": {
-    "@urql/svelte": "^1.3.2",
-    "express": "^4.17.1",
-    "graphql": "^16.0.1",
-    "sirv-cli": "^1.0.0",
-    "yarn-run-all": "^3.1.1"
-  },
-  "packageManager": "yarn@3.5.0"
+	"name": "skarlet-ssr",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-netlify": "^2.0.7",
+		"@sveltejs/kit": "^1.5.0",
+		"autoprefixer": "^10.4.14",
+		"mdsvex": "^0.10.6",
+		"postcss": "^8.4.23",
+		"svelte": "^3.54.0",
+		"svelte-check": "^3.0.1",
+		"tailwindcss": "^3.3.2",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"vite": "^4.3.0"
+	},
+	"dependencies": {
+		"@urql/svelte": "^4.0.1",
+		"graphql": "^16.0.1",
+		"postcss-nesting": "^11.2.2",
+		"postcss-scss": "^4.0.6"
+	},
+	"type": "module"
 }
