--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,4 +15,4 @@ services:
     working_dir: /usr/src/app
     env_file:
       - .env
-    command: sh -c "yarn dev"
+    command: sh -c "npm run dev"
